<resources>
    <string name="app_name">FireBaseAuth</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login_fb">Login with Facebook</string>
    <string name="btn_login_google">Login with Google</string>
    <string name="btn_log_out">LogOut</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="msg_failed_send_email">Failed to send reset email!</string>
    <string name="msg_send_email_to_reset">We have sent you instructions to reset your password!</string>
    <string name="required_email_registered">Enter your registered email id</string>
    <string name="required_email">Enter Your Email</string>
    <string name="required_password">Enter Your Password</string>
    <string name="err_auth_failed">Authentication failed.</string>

    <string name="fb_app_secret">ffd02ea2f5eaf6e27a25fe1f49cd2ec5</string>
    <string name="facebook_app_id">2235293120092298</string>
    <string name="fb_login_protocol_scheme">fb2235293120092298</string>

</resources>
